--- a/Demo_NhinHinhDoanChu/app/src/main/AndroidManifest.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Demo_NhinHinhDoanChu"
         tools:targetApi="31">
         <activity
+            android:name=".PlayGameActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true">
             <intent-filter>
