--- a/Demo_NhinHinhDoanChu/app/src/main/AndroidManifest.xml
+++ b/Demo_NhinHinhDoanChu/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Demo_NhinHinhDoanChu"
         tools:targetApi="31">
         <activity
+            android:name=".KetThucGameMainActivity"
+            android:exported="false" />
+        <activity
+            android:name=".QuaManMainActivity"
+            android:exported="false" />
+        <activity
             android:name=".RulesActivity"
             android:exported="false" />
         <activity
